feature: Добавил создание новости, подправил enum
